# Small-World

./: .gitignore  CMakeLists.txt  Dice.cpp  Dice.h  README.md
Dice/: Dice.cpp  Dice.h  main.cpp
FantasyRaceBanner/: FantasyRaceBanner.cpp  FantasyRaceBanner.h
GamePiece/: GamePiece.cpp  GamePiece.h
GameTurn/: main.cpp
LostTribeToken/: LostTribeToken.cpp  LostTribeToken.h
Main/: main.cpp  part1.cpp  part2.cpp  part3.cpp  part4.cpp  part5.cpp  part6.cpp  part7.cpp  parts1_2.cpp  parts1_2_4.cpp
MainLoop/: MainLoop.cpp  MainLoop.h
Map/: Driver.cpp  Map.cpp  Map.h  main.cpp
Map/textMaps/: 2Players.txt  3Players.txt  4Players.txt  5Players.txt  Fail.txt
MatchingRaceToken/: MatchingRaceToken.cpp  MatchingRaceToken.h
Objects/Dice/: Dice.cpp  Dice.h
Objects/FantasyRaceBanner/: FantasyRaceBanner.cpp  FantasyRaceBanner.h
Objects/GameTurn/: GameTurn.cpp  GameTurn.h
Objects/LostTribeToken/: LostTribeToken.h
Objects/Map/: Map.cpp  Map.h
Objects/MatchingRaceToken/: MatchingRaceToken.cpp  MatchingRaceToken.h
Objects/Player/: DefaultPlayer.h  Player.cpp  Player.h  PlayerBehavior.h
Objects/SpecialPowerBadge/: SpecialPowerBadge.cpp  SpecialPowerBadge.h
Objects/SummarySheet/: SummarySheet.cpp  SummarySheet.h
Objects/VictoryCoin/: VictoryCoin.cpp  VictoryCoin.h
Observer/: Observer.cpp  Observer.h
Patterns/Observer/: Observer.cpp  Observer.h
Patterns/Observer/Decorator/: Decorator.cpp  Decorator.h
Patterns/Observer/Decorator/CoinObserver/: CoinObserver.cpp  CoinObserver.h
Patterns/Observer/Decorator/GraphObserver/: GraphObserver.cpp  GraphObserver.h
Patterns/Observer/Decorator/HandObserver/: HandObserver.cpp  HandObserver.h
Patterns/Observer/Observer/: Observer.cpp  Observer.h  ObserverInterface.h
Patterns/Strategy/: Aggressive.cpp  Aggressive.h  Defensive.cpp  Defensive.h  Moderate.cpp  Moderate.h  Random.cpp  Random.h
Player/: Player.cpp  Player.h  main.cpp
SpecialPowerBadge/: SpecialPowerBadge.cpp  SpecialPowerBadge.h
SummarySheet/: SummarySheet.cpp  SummarySheet.h  main.cpp
VictoryCoin/: VictoryCoin.cpp  VictoryCoin.h
textMaps/: 2Players.txt  3Players.txt  4Players.txt  5Players.txt  Fail.txt
